# Mole-Swift

./: .gitignore  AGENTS.md  README.md  SECURITY_AUDIT.md  mole
.github/workflows/: build-mac-app.yml  build-tauri-app.yml
MoleApp/: README.md  project.yml
MoleApp/App/: AppDelegate.swift  Feature.swift  MoleApp.swift  RootView.swift
MoleApp/Components/: CleanupScreen.swift  CommandRunner.swift  Components.swift  PreviewSummaryView.swift  TreemapView.swift
MoleApp/Core/: AnalyzeDeleter.swift  CLIBridge.swift  CLILocator.swift  CLIPurgeScanner.swift  CleanupPhaseModel.swift  DebugLog.swift  FastMetricsCollector.swift  InstallerScanner.swift  Localization.swift  MoTUI.swift  MoleService.swift  NativeMetrics.swift  PTYTask.swift  PreviewParser.swift  ProtectionResolver.swift  PurgeDeleter.swift  PurgeScanner.swift  SelectionSession.swift  UnifiedOperationLog.swift  UpdateChecker.swift
MoleApp/Resources/: Info.plist
MoleTauri/: .gitignore  README.md  index.html  package-lock.json  package.json
MoleTauri/src/: App.tsx  styles.css
MoleTauri/src-tauri/: Cargo.toml  tauri.conf.json
MoleTauri/src-tauri/capabilities/: default.json
MoleTauri/src-tauri/icons/: icon.icns
MoleTauri/src-tauri/src/: cli.rs  commands.rs  installer.rs  logger.rs  main.rs  models.rs  purge.rs  trash.rs  update.rs
cmd/status/: main_test.go  metrics.go  metrics_cpu.go
lib/clean/: apps.sh  dev.sh  project.sh
lib/core/: file_ops.sh  help.sh
tests/: clean_ai_cli_caches.bats  clean_apps.bats  core_safe_functions.bats  uninstall.bats  uninstall_scan_bash32.bats
(+44 files in other folders)
